--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@react-spring/web": "^9.1.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "http-server": "^0.12.3",
+    "module_name": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-simple-image-viewer": "^0.0.8",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
